Updating files most recently

--- a/DBS_Assignment_2_Solution/DBS_Assignment_2/DBS_Assignment_2.vcxproj
+++ b/DBS_Assignment_2_Solution/DBS_Assignment_2/DBS_Assignment_2.vcxproj
@@ -118,12 +118,15 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>C:\dbs311\product\12.2.0\client_1\oci\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>C:\dbs311\product\12.2.0\client_1\oci\lib\msvc;C:\dbs311\product\12.2.0\client_1\oci\lib\msvc\vc14;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>oraocci12.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
